# snakebox

./: .clang-format  CMakeLists.txt  ColorfulLog.h  Fluid.cpp  Fluid.h  Game.h  GameDestroy.cpp  GameInit.cpp  GameRun.cpp  Math.h  Render.cpp  Render.h  Resources.cpp  Resources.h  Spawnable.h  ThreadPool.h  imgui.ini  main.cpp  run.txt
.cache/clangd/index/: ColorfulLog.h.3BBB336C86ACDCD6.idx  Game.h.9D888775C294CBB0.idx  GameDestroy.cpp.E88AAB68226A24A7.idx  GameInit.cpp.4A82F10F5DF06CCA.idx  GameRun.cpp.395186358A951A8A.idx  Math.h.F1A7C9CB0AA4C278.idx  Render.cpp.B08B7AF554BCE6F0.idx  Render.h.A0524C71DA1A2F6B.idx  Resources.cpp.8AF341990F0CCAC7.idx  Resources.h.4AFFD91C5D985E01.idx  Spawnable.h.3954C4F7EA0F30DC.idx  ThreadPool.h.A3A87F1AE3C4B3C1.idx  imconfig.h.D590C0BC0B363244.idx  imgui-SFML.cpp.2E94A035A21EBEF2.idx  imgui-SFML.h.0730B30E7E476CE6.idx  imgui-SFML_export.h.D280264E49F9F930.idx  imgui.cpp.90293AE59C51385E.idx  imgui.h.9738E979D8D261E8.idx  imgui_demo.cpp.ACDD7C4E28EB5C27.idx  imgui_draw.cpp.735B3509BEDA6A60.idx  imgui_internal.h.76194B5483A63E95.idx  imgui_tables.cpp.9474FDC4CA6E171B.idx  imgui_widgets.cpp.622AFC76EBB3262B.idx  imstb_rectpack.h.63EE18B094823C58.idx  imstb_textedit.h.F3D66F8DDD1CCA1B.idx  imstb_truetype.h.E454D3FCED50AA02.idx  main.cpp.3777BAF5FEF02A2D.idx
Assets/Shaders/: noiseFrag.glsl  star.frag
imgui/: imfilebrowser.h  imgui-SFML.cpp
